--- a/rk356x/zh/03-源码编译.md
+++ b/rk356x/zh/03-源码编译.md
@@ -101,8 +101,6 @@ $ git reset --hard
 
 
 
-
-
 ### 获取Rootfs镜像
 
 * 文件系统网盘目录
@@ -232,6 +230,24 @@ $ ./build.sh buildroot
 ```
 
 > 镜像生成目录：rockdev/rootfs.img
+
+
+
+### 其他常用命令
+
+**内核配置**
+
+```
+$ ./build.sh
+```
+
+
+
+**buildroot配置**
+
+```
+$ ./build.sh menuconfig
+```
 
 
 
