--- a/rk356x/zh/02-镜像烧录.md
+++ b/rk356x/zh/02-镜像烧录.md
@@ -165,7 +165,7 @@ Maskrom模式 常用于系统损坏后，强制烧录镜像
 
 ### Linux系统登陆用户密码
 
-Debian系统用户名/密码：kickpi/kickpi
+Debian系统用户名/密码：linaro/linaro
 
 Ubuntu系统用户名/密码：kickpi/kickpi
 
