--- a/rk356x/zh/01-快速入门文档.md
+++ b/rk356x/zh/01-快速入门文档.md
@@ -67,29 +67,35 @@ KICKPI 开发资料通过网盘方式推送，同时支持 百度网盘、OneDri
 * 网盘目录说明
 
 ```
-├── 1-SDK Source 软件源码
-│   ├── rk356x-android13
-│   └── rk356x-linux
-│       ├── buildroot-dl-20230607.tar.gz
-│       ├── linaro-rootfs-20230524.tar.gz
-│       ├── rk356x-linux-20230524.tar.gz
-│       └── ubuntu-rootfs-20230523.tar.gz
-├── 2-System Image 系统镜像
-│   └── RK3566-TX66
-│       ├── Android11-TV
-│       ├── Android13
-│       ├── Debian11
-│       └── Ubuntu2004
-│   └── RK3568-K1
-│       ├── Android13
-│       ├── Debian11
-│       └── Ubuntu2004
-├── 3-Hardware Data 硬件资料
-└── 4-Development Tools 开发工具
-    ├── ADB Tool
-    ├── UART Debug Tool 串口调试工具
-    ├── USB Driver USB驱动
-    └── USB Image Burn Tool 镜像烧录工具
+├── 1-SDK软件源码
+│   ├── android13
+│   └── linux
+├── 2-Image镜像
+│   ├── RK3566-TX66
+│   │   ├── Android11-TV
+│   │   ├── Debian11
+│   │   └── Ubuntu2004
+│   ├── RK3568-K1
+│   │   ├── Android13.0
+│   │   ├── Debian11
+│   │   └── Ubuntu2204
+│   └── RK3568-K1B
+│       ├── Android13.0
+│       ├── Debian11
+│       └── Ubuntu2204
+├── 3-SoftwareData软件资料
+│   ├── rknn_toolkit
+│   └── RKNPU
+├── 4-HardwareData硬件资料
+│   ├── RK3568-K1
+│   └── RK3568-K1B
+├── 5-DevelopmentTools开发工具
+│   ├── ADB Tool
+│   ├── ADB投屏
+│   ├── FactoryTool 工厂镜像烧录工具
+│   ├── UART DebugTool 串口调试工具
+│   ├── USB Driver USB驱动
+│   └── USB ImageBurnTool 镜像烧录工具
 ```
 
 
