--- a/rk356x/zh/01-快速入门文档.md
+++ b/rk356x/zh/01-快速入门文档.md
@@ -56,11 +56,7 @@
 
 KICKPI 开发资料通过网盘方式推送，同时支持 百度网盘、OneDrive网盘
 
-两份网盘资料内容一致，可根据实际情况自行选择
-
-[百度网盘地址](链接：https://pan.baidu.com/s/1aaE9h494JZcj_QIufnUDHA?pwd=1234)
-
-[OneDrive网盘地址](https://1drv.ms/f/s!AuVepzkLS2sQg40ELt1V77H-aKn_Sw?e=womwYI)
+两份网盘资料内容一致，可根据实际情况自行选择，网盘链接咨询客服获取
 
 
 
