--- a/rk356x/zh/04-硬件功能使用说明.md
+++ b/rk356x/zh/04-硬件功能使用说明.md
@@ -294,7 +294,7 @@ K1开发板配备HYM8563 RTC芯片，可实现掉电保存时间功能
 
 ## 12. LCD
 
-K1开发板 配备三路LCD接口，分别是一路LVDS接口（可复用为MIPI接口）、一路MIPI接口、一路eDP接口
+K1开发板 配备三路LCD接口，分别是两路LVDS/MIPI接口（可复用）、一路eDP接口
 
 三路LCD接口支持三屏异显/异触
 
