--- a/h618/zh/00-开发板功能列表.md
+++ b/h618/zh/00-开发板功能列表.md
@@ -1,6 +1,6 @@
 # 00-开发板功能列表
 
-
+123
 
 | 功能列表   | K2B                                                          |
 | ---------- | ------------------------------------------------------------ |
@@ -17,10 +17,9 @@
 | USB HOST   | USB2.0 HOST X2                                               |
 | USB OTG    | USB2.0 OTG X1                                                |
 | 红外接收器 | Y                                                            |
-| 实时时钟   | HYM8563                                                      |
 | 调试串口   | Y                                                            |
 | 按键       | Recovery KEY<br />RESET KEY<br />FEL KEY                     |
-| 扩展引脚   | Extend Pin Total 20Pin：<br />* UART X4<br />* SPI X1<br />* PWM X11<br />* ADC X1<br />* I2C X2<br />* GPIO X28 |
+| 扩展引脚   | Extend Pin Total 20Pin：<br />* UART5<br />* SPI1<br />* UART DEBUG<br />* USB<br />* I2C3<br />* GPIO X2 |
 | HDMI显示屏 | X1（up to 4K@60Hz）                                          |
 | 耳机       | Y                                                            |
 | WIFI/蓝牙  | AW859                                                        |
