--- a/rk356x/zh/04-硬件功能使用说明.md
+++ b/rk356x/zh/04-硬件功能使用说明.md
@@ -8,9 +8,7 @@
 
 ### K1引脚列表
 
-![lQDPJwdL80_ad8TNIJ3NPi2w1GhOJ6gVEfcFI3nfzUimAA_15917_8349](http://tanzhtanzh.oss-cn-shenzhen.aliyuncs.com/img/lQDPJwdL80_ad8TNIJ3NPi2w1GhOJ6gVEfcFI3nfzUimAA_15917_8349.jpg)
-
-
+![image-20240130091806160](http://tanzhtanzh.oss-cn-shenzhen.aliyuncs.com/img/image-20240130091806160.png)
 
 
 
@@ -20,13 +18,19 @@
 
 
 
+### K3引脚列表
+
+
+
 
 
 ## 2. LED
 
-K1开发板配备一个工作LED，默认作为系统工作心跳指示灯。若心跳灯持续闪烁，则表示内核正常运行。
+开发板配备2个LED，绿色LED为电源指示灯，上电默认长亮
 
-另外，可参考以下方面控制LED作为其他功能。
+蓝色LED为系统工作心跳灯。若心跳灯持续闪烁，则表示内核正常运行。
+
+另外，系统工作心跳灯可参考以下方面控制LED作为其他功能。
 
 
 
@@ -174,7 +178,7 @@ K1开发板 配备RTL8822CS高性能WIFI模块
 
 ### *命令行配置WIFI
 
-
+![image-20240120091252595](http://tanzhtanzh.oss-cn-shenzhen.aliyuncs.com/img/image-20240120091252595.png)
 
 
 
