--- a/rk356x/zh/00-开发板功能列表.md
+++ b/rk356x/zh/00-开发板功能列表.md
@@ -2,39 +2,39 @@
 
 
 
-| 功能列表       | K1                                                           | K1B                                                          |
-| -------------- | ------------------------------------------------------------ | ------------------------------------------------------------ |
-| 外观           | ![image-20231228111602702](http://tanzhtanzh.oss-cn-shenzhen.aliyuncs.com/img/image-20231228111602702.png) | ![image-20231228111520653](http://tanzhtanzh.oss-cn-shenzhen.aliyuncs.com/img/image-20231228111520653.png) |
-| PCB尺寸        | 141mm * 80mm                                                 | 81mm * 55mm                                                  |
-| 主控           | Rockchip RK3568B2                                            | Rockchip RK3568B2                                            |
-| CPU            | 四核Cortex-A55                                               | 四核Cortex-A55                                               |
-| GPU            | Mali G52 2EE                                                 | Mali G52 2EE                                                 |
-| NPU            | RKNN 0.8Tops                                                 | RKNN 0.8Tops                                                 |
-| 内存           | 2G / 4G                                                      | 2G / 4G                                                      |
-| 存储           | 8G / 16G / 32G                                               | 8G / 16G / 32G                                               |
-| 系统           | Android13.0 / Debian11 / Ubuntu2204                          | Android13.0 / Debian11 / Ubuntu2204                          |
-| 电源供电       | DC 12V                                                       | Type-C 5V                                                    |
-| 散热风扇       | Y（5V Power）                                                | N                                                            |
-| LED灯          | * Power LED<br />* Work LED                                  | * Power LED<br />* Work LED                                  |
-| USB HOST       | * USB2.0 HOST X1<br />* USB3.0 HOST X1                       | * USB2.0 HOST X1<br />* USB3.0 HOST X1                       |
-| USB OTG        | USB2.0 OTG X1                                                | USB2.0 OTG X1                                                |
-| 红外接收器     | Y                                                            | Y                                                            |
-| 实时时钟       | Y（HYM8563）                                                 | N                                                            |
-| 调试串口       | Y                                                            | Y                                                            |
-| 按键           | * Recovery KEY<br />* RESET KEY<br />* MASKROM KEY<br />* POWER KEY | * Recovery KEY<br />* RESET KEY<br />* MASKROM KEY           |
-| 扩展引脚       | Extend Pin Total 40Pin：<br />* UART X4<br />* SPI X1<br />* PWM X11<br />* ADC X1<br />* I2C X2<br />* GPIO X28 | Extend Pin Total 20Pin：<br />* UART X2<br />* SPI X1<br />* PWM X1<br />* ADC X1<br />* I2C X1<br />* GPIO X14 |
-| HDMI显示屏     | X1（up to 4K@60Hz）                                          | X1（up to 4K@60Hz）                                          |
-| MIPI DSI显示屏 | X2（up to 1920x1080@60Hz ）                                  | X1（up to 1920x1080@60Hz ）                                  |
-| LVDS显示屏     | X1（up to 1920x1080@60Hz ）                                  | X1（up to 1920x1080@60Hz ）                                  |
-| EDP显示屏      | X1（up to 2560x1600@60Hz ）                                  | N                                                            |
-| MIPI CSI摄像头 | 4Lane X1 or 2Lane X2                                         | 4Lane X1 or 2Lane X2                                         |
-| 喇叭           | Y（Max Power 5W）                                            | Y（Max Power 2W）                                            |
-| 耳机           | Y                                                            | N                                                            |
-| 麦克风         | Y                                                            | N                                                            |
-| WIFI/蓝牙      | Y（RTL8822CS）                                               | Y（RTL8822CS）                                               |
-| 以太网         | 1000M X2                                                     | 1000M X1                                                     |
-| 4G移动网络     | Y（EC20）                                                    | N                                                            |
-| SD卡           | Y                                                            | Y                                                            |
-| SATA硬盘       | Y                                                            | N                                                            |
-| M.2硬盘        | Y                                                            | N                                                            |
+| 功能列表        | K1                                                           | K1B                                                          | K3                                                           |                                              |
+| --------------- | ------------------------------------------------------------ | ------------------------------------------------------------ | ------------------------------------------------------------ | -------------------------------------------- |
+| PCB尺寸         | 141mm * 80mm                                                 | 81mm * 55mm                                                  | 141mm * 80mm                                                 | 0                                            |
+| 主控            | Rockchip RK3568B2                                            | Rockchip RK3568B2                                            | Rockchip RK3562                                              | 0                                            |
+| CPU             | ARM Cortex-A55 X4                                            | ARM Cortex-A55 X4                                            | ARM Cortex-A53 X4                                            | 0                                            |
+| GPU             | Mali G52 2EE                                                 | Mali G52 2EE                                                 | Mali G52 2EE                                                 | 0                                            |
+| NPU             | RKNN 0.8Tops                                                 | RKNN 0.8Tops                                                 | RKNN 0.8Tops                                                 | 0                                            |
+| 内存            | 2G / 4G / 8G                                                 | 2G / 4G / 8G                                                 | 2G / 4G / 8G                                                 | 0                                            |
+| 存储            | 8G / 16G / 32G / 64G                                         | 8G / 16G / 32G / 64G                                         | 8G / 16G / 32G / 64G                                         | 0                                            |
+| 系统            | Android13.0 / Debian11 / Ubuntu20.04                         | Android13.0 / Debian11 / Ubuntu20.04                         | Android13.0 / Debian11 / Ubuntu20.04                         | 0                                            |
+| 电源供电        | DC 12V                                                       | Type-C 5V                                                    | DC 12V                                                       | 1                                            |
+| 散热风扇        | Y                                                            | N                                                            | Y                                                            | 1                                            |
+| LED灯           | * Power LED<br />* Work LED                                  | * Power LED<br />* Work LED                                  | * Power LED<br />* Work LED                                  | 1                                            |
+| USB HOST        | * USB2.0 HOST X1<br />* USB3.0 HOST X1                       | * USB2.0 HOST X1<br />* USB3.0 HOST X1                       | USB2.0 HOST X2                                               | 1                                            |
+| USB OTG         | USB2.0 OTG X1                                                | USB2.0 OTG X1                                                | USB2.0 OTG X1                                                | 不识别                                       |
+| 红外接收器      | Y                                                            | Y                                                            | Y                                                            | 1，enter按键优化下                           |
+| 实时时钟        | HYM8563                                                      | N                                                            | HYM8563                                                      |                                              |
+| 调试串口        | Y                                                            | Y                                                            | Y                                                            | 1                                            |
+| 按键            | * Recovery KEY<br />* RESET KEY<br />* MASKROM KEY<br />* POWER KEY | * Recovery KEY<br />* RESET KEY<br />* MASKROM KEY           | * Recovery KEY<br />* RESET KEY<br />* MASKROM KEY<br />* POWER KEY | 1                                            |
+| 扩展引脚        | Extend Pin Total 40Pin：<br />* UART X4<br />* SPI X1<br />* PWM X11<br />* ADC X1<br />* I2C X2<br />* GPIO X28 | Extend Pin Total 20Pin：<br />* UART X2<br />* SPI X1<br />* PWM X1<br />* ADC X1<br />* I2C X1<br />* GPIO X14 | Extend Pin Total 40Pin：<br />                               |                                              |
+| HDMI            | X1（up to 4K@60Hz）                                          | X1（up to 4K@60Hz）                                          | N                                                            | 0                                            |
+| MIPI DSI LCD    | X2（up to 1920x1080@60Hz ）                                  | X1（up to 1920x1080@60Hz ）                                  | X1（up to 1920x1080@60Hz ）                                  | 硬件                                         |
+| Single LVDS LCD | X2（up to 1280x720@60Hz ）                                   | X1（up to 1280x720@60Hz ）                                   | X1（up to 1280x720@60Hz ）                                   | 硬件                                         |
+| DUAL LVDS LCD   | N                                                            | N                                                            | X1（up to 1920x1080@60Hz ）                                  |                                              |
+| EDP LCD         | X1（up to 2560x1600@60Hz ）                                  | N                                                            | N                                                            | 0                                            |
+| MIPI CSI摄像头  | 4Lane X1 or 2Lane X2                                         | 4Lane X1 or 2Lane X2                                         | 4Lane X2 or 2Lane X4                                         |                                              |
+| 喇叭            | Max Power 5W                                                 | Max Power 2W                                                 | Max Power 5W                                                 |                                              |
+| 耳机            | Y                                                            | N                                                            | Y                                                            |                                              |
+| 麦克风          | Y                                                            | N                                                            | Y                                                            |                                              |
+| WIFI/蓝牙       | RTL8822CS                                                    | RTL8822CS                                                    | RTL8822CS                                                    | 1 RK3568蓝牙串口是8，RK3562是串口7，如何兼容 |
+| 以太网          | 1000M X2                                                     | 1000M X1                                                     | 1000M X1<br />100M X1                                        | YT8512C驱动适配                              |
+| 4G移动网络      | MINI PCIE EC20                                               | N                                                            | MINI PCIE EC20                                               |                                              |
+| SD卡            | Y                                                            | Y                                                            | Y                                                            | 1                                            |
+| SATA硬盘        | Y                                                            | N                                                            | N                                                            | 0                                            |
+| M.2硬盘         | Y                                                            | N                                                            | Y                                                            | 1                                            |
 
