--- a/rk356x/zh/01-快速入门文档.md
+++ b/rk356x/zh/01-快速入门文档.md
@@ -2,7 +2,7 @@
 
 
 
-11223344
+
 
 ## 1. 主控信息
 
@@ -34,19 +34,33 @@
 
 ### RK3568 K1B
 
-![img](http://tanzhtanzh.oss-cn-shenzhen.aliyuncs.com/img/O1CN01gkMedU29djTdYp9KH_!!2216870748091.jpg)
+![image-20240130090518950](http://tanzhtanzh.oss-cn-shenzhen.aliyuncs.com/img/image-20240130090518950.png)
+
+### RK3562 K3
 
 
 
-## 3. 配件信息
+
+
+
+
+## 3. 配件列表
 
 常用配件有适配器、USB烧录线、调试串口线 等可自行选购
+
+### RK3568 K1配件列表
 
 ![img](http://tanzhtanzh.oss-cn-shenzhen.aliyuncs.com/img/O1CN01kcjuvi29djTNDfOhy_!!2216870748091.jpg)
 
 
 
+### RK3568 K1B配件列表
+
 ![img](http://tanzhtanzh.oss-cn-shenzhen.aliyuncs.com/img/O1CN01fnKIlL29djThiLgdR_!!2216870748091.jpg)
+
+
+
+### RK3562 K3配件列表
 
 
 
