--- a/h618/zh/03-源码编译.md
+++ b/h618/zh/03-源码编译.md
@@ -237,13 +237,15 @@ $ ./build.sh buildroot
 
 
 
-## 3. Android13.0 SDK编译
+## 3. Android SDK编译
 
 ### SDK介绍
 
-内核版本：5.10
+Android SDK版本信息
 
-Android系统版本：13.0
+内核版本：5.4
+
+Android系统版本：12.0
 
 
 
