--- a/h618/zh/02-镜像烧录.md
+++ b/h618/zh/02-镜像烧录.md
@@ -10,158 +10,161 @@
 
 
 
-### 下载准备工具
+### 准备工具
 
-镜像烧录 准备工具如下所示
+**下载软件工具**
+
+软件工具分为三部分，分别为 USB驱动、镜像烧录工具、系统镜像
+
+三部分都可通过网盘下载
 
 ```
-├── 2-System Image 系统镜像
-│   └── RK3568-K1
-│       ├── Android13
-│       ├── Debian11
-│       └── Ubuntu2004
-└── 4-Development Tools 开发工具
-    ├── USB Driver USB驱动
-    └── USB Image Burn Tool 镜像烧录工具
+└── 2-System Image 系统镜像
+    └── K2B
+   		├── Android12 TV
+       	├── Android12 Tablet
+       	└── Ubuntu2004
+└── 5-DevelopmentTools开发工具
+    └── USB ImageBurnTool 镜像烧录工具
+    	└── PhoenixSuit.zip
 ```
 
-> 镜像烧录 必须下载 USB驱动、镜像烧录工具
+> 系统镜像获取途径：
 >
-> 系统镜像 可根据实际需要选择下载 或 自行通过SDK编译
+> 1. 从网盘下载
+> 2. 通过SDK编译获取
+
+> 镜像说明：
+>
+> ​	开发板提供3个镜像，分别是Android12 TV 、Android12 Tablet、Ubuntu2004
+>
+> ​	TV 跟 Tablet 都是由Android12.0 SDK编译出来，只是桌面界面区别
+>
+> ​	TV是机顶盒界面，Tablet是平板界面，可按需下载
+
+
+
+**硬件准备工具**
+
+准备一根 USB A to C 烧录线
+
+烧录线TYPE-C口 连接主板的TYPE-C口
+
+烧录线TYPE-A口 连接电脑的TYPE-A口
 
 
 
 ### 安装USB驱动
 
-USB驱动网盘目录：4-开发工具\USB驱动\DriverAssitant\_v5.12.zip
+**解压PhoenixSuit.zip**
 
-![image-20230526154517334](http://tanzhtanzh.oss-cn-shenzhen.aliyuncs.com/img/image-20230526154517334.png)
-
-
-
-### 获取镜像文件
-
-镜像文件可通过以下两种方式获取：网盘下载、SDK编译
-
-SDK编译详细步骤参考文档 \[02-SDK编译]
-
-镜像文件网盘目录：
+USB驱动目录
 
 ```
-├── 2-System Image 系统镜像
-    └── RK3568-K1
-        ├── Android13
-        	├── update-rk3568-kickpi-k1-android-hdmi-2023102403.img
-        ├── Debian11
-        └── Ubuntu2004
+PhoenixSuit/Drivers/AW_Driver/
 ```
 
+> 驱动不支持直接打开安装，必须在设备管理器中 识别出未知设备后才能安装驱动
 
 
-镜像名称解析
 
-![image-20231024111614065](http://tanzhtanzh.oss-cn-shenzhen.aliyuncs.com/img/image-20231024111614065.png)
+**主板进入烧录模式**
 
-> 
+1. 按住 FEL升级键
+2. 主板上电，如果已上电则需重新上电（按一下复位键）
+
+![image-20240306170511855](http://tanzhtanzh.oss-cn-shenzhen.aliyuncs.com/img/image-20240306170511855.png)
 
 
+
+**打开电脑设备管理器界面**
+
+若主板成功进入烧录模式，并且电脑不具备USB驱动时，可识别出`未知设备`
+
+按照下图步骤所示，操作安装驱动即可
+
+![image-20221129104615672](http://tanzhtanzh.oss-cn-shenzhen.aliyuncs.com/img/image-20221129104615672.png)
+
+
+
+![image-20221129104636689](http://tanzhtanzh.oss-cn-shenzhen.aliyuncs.com/img/image-20221129104636689.png)
+
+
+
+![image-20221129104649695](http://tanzhtanzh.oss-cn-shenzhen.aliyuncs.com/img/image-20221129104649695.png)
+
+
+
+![image-20221129104706378](http://tanzhtanzh.oss-cn-shenzhen.aliyuncs.com/img/image-20221129104706378.png)
+
+
+
+![image-20221129104725698](http://tanzhtanzh.oss-cn-shenzhen.aliyuncs.com/img/image-20221129104725698.png)
 
 
 
 ### 安装镜像烧录工具
 
-镜像烧录工具网盘目录：4-开发工具\USB镜像烧录工具\RKDevTool\_Release\_v2.96.zip
+**解压PhoenixSuit.zip**
 
 
 
-1. 通过网盘下载镜像烧录工具后，解压文件夹，得到以下目录列表
+**打开PhoenixSuit.ext**
+
+![image-20240306170759670](http://tanzhtanzh.oss-cn-shenzhen.aliyuncs.com/img/image-20240306170759670.png)
 
 
 
-2. 修改镜像烧录工具语言（可选）
+**烧录工具界面**
 
-默认镜像烧录工具为中文界面，可按照如下所示修改为英文界面
-
-![img](http://tanzhtanzh.oss-cn-shenzhen.aliyuncs.com/img/image-20231010202819610.png)
-
-![img](http://tanzhtanzh.oss-cn-shenzhen.aliyuncs.com/img/image-20231010203036869.png)
+![image-20240306170835586](http://tanzhtanzh.oss-cn-shenzhen.aliyuncs.com/img/image-20240306170835586.png)
 
 
 
-3. 打开烧录工具
+### 烧录镜像
 
-![image-20231017114016561](http://tanzhtanzh.oss-cn-shenzhen.aliyuncs.com/img/image-20231017114016561.png)
+**选择烧录镜像**
 
-4. 烧录工具界面如下
+1. 进入 `一键刷机` 界面
+2. 点击 `浏览` 选择镜像
 
-![image-20230526154741821](http://tanzhtanzh.oss-cn-shenzhen.aliyuncs.com/img/image-20230526154741821.png)
-
-
-
-### 开发板进入烧录模式(Pic)
-
-烧录镜像 必须使开发板进入烧录模式，Rockchip平台的烧录模式有LOADER模式、Maskrom模式
-
-LOADER模式 常用于完整镜像烧录、分区烧录皆可
-
-Maskrom模式 常用于系统损坏后，强制烧录镜像
+![image-20240306171236404](http://tanzhtanzh.oss-cn-shenzhen.aliyuncs.com/img/image-20240306171236404.png)
 
 
+
+**主板进入烧录模式**
 
 操作步骤：
 
-1. Window电脑上打开烧录工具（参考以上说明安装烧录工具）
-2. 开发板OTG接口 连接 电脑USB接口
-3. 保持长按 RECOVERY按键，并且连接DC电源供电接口
-4. 查看 镜像烧录工具 是否正常识别Loader设备
-5. 若正常识别到Loader设备，则可松开RECOVERY按键，否则重复上述步骤多尝试几次
+1. 按住 FEL升级键
+2. 主板上电，如果已上电则需重新上电（按一下复位键）
+
+![image-20240306170600024](http://tanzhtanzh.oss-cn-shenzhen.aliyuncs.com/img/image-20240306170600024.png)
 
 
 
+**开始烧录镜像**
 
+1. 点击 `是` 开始烧录镜像
 
-### 烧录工具使用
+2. 等待烧录进度条完成
+3. 烧录完成后，主板自动重启
 
-烧录镜像 分为 完整镜像烧录 和 分区镜像烧录
-
-完整镜像烧录 常用于刷机 或 开发板更换不同系统
-
-分区镜像烧录 常用于调试阶段，必须明确每个分区的作用再进行烧录，否则会导致系统损坏
-
-
-
-#### 烧录完整镜像
-
-![image-20230519111357204](http://tanzhtanzh.oss-cn-shenzhen.aliyuncs.com/img/image-20230519111357204.png)
-
-操作步骤：
-
-1. 烧录工具成功识别板卡设备（若识别不到，返回上一步确认操作）
-2. 进入完整镜像烧录页面
-3. 选择镜像路径
-4. 开始烧录镜像
-5. 查看 烧录日志，烧录成功后自动重启进入系统
-
-
-
-#### 烧录分区镜像
-
-![image-20230926170256112](http://tanzhtanzh.oss-cn-shenzhen.aliyuncs.com/img/image-20230926170256112.png)
-
-操作步骤：
-
-1. 烧录工具 成功识别板卡设备（若识别不到，返回上一步确认操作）
-2. 进入分区镜像烧录页面
-3. 勾选烧录分区项
-4. 选择镜像路径
-5. 开始烧录镜像
-6. 查看 烧录日志，烧录成功后自动重启进入系统
+![image-20240306171455427](http://tanzhtanzh.oss-cn-shenzhen.aliyuncs.com/img/image-20240306171455427.png)
 
 
 
 
 
 ## 2. 系统启动
+
+### Android桌面界面
+
+主板连接HDMI显示器，系统启动成功后，界面如下
+
+![image-20240306171855522](http://tanzhtanzh.oss-cn-shenzhen.aliyuncs.com/img/image-20240306171855522.png)
+
+
 
 ### Linux系统登陆用户密码
 
@@ -171,23 +174,10 @@ Ubuntu系统用户名/密码：kickpi/kickpi
 
 
 
-### 图形桌面登陆
+### Linux图形桌面登陆
 
 默认自动登录kickpi用户
 
 图形桌面依赖显示设备，开机前需要先连接HDMI或LCD
-
-
-
-### 调试串口登录
-
-默认自动登录ROOT用户
-
-ROOT用户默认未设置密码，可用以下命令配置ROOT密码
-
-```
-$ sudo passwd root
-```
-
 
 
