--- a/h618/zh/02-镜像烧录.md
+++ b/h618/zh/02-镜像烧录.md
@@ -1,10 +1,14 @@
 # 02-镜像烧录
 
+K2B 目前提供 Android12.0 和 Ubuntu22.04 两个镜像
+
+Android12.0 可使用 USB烧录线 把镜像烧录到板载eMMC
+
+Ubuntu22.04 需要可把镜像烧录到SD卡，直接用SD卡启动系统 或 将SD卡的系统拷贝到eMMC
 
 
 
-
-## 1. 镜像烧录
+## 1. Android镜像烧录
 
 开发板出厂默认烧录好镜像，若不需要更换系统的话，可直接跳过此步骤，启动系统
 
@@ -16,14 +20,16 @@
 
 软件工具分为三部分，分别为 USB驱动、镜像烧录工具、系统镜像
 
-三部分都可通过网盘下载
+三部分都可通过网盘下载，网盘地址可联系客服获取
+
+以下为工具在网盘中所对应的目录结构
 
 ```
 └── 2-System Image 系统镜像
     └── K2B
        	├── Android12 TV
        	├── Android12 Tablet
-       	└── Ubuntu2004
+       	└── Ubuntu2204
 └── 5-DevelopmentTools开发工具
     └── USB ImageBurnTool 镜像烧录工具
     	└── PhoenixSuit.zip
@@ -46,11 +52,7 @@
 
 **硬件准备工具**
 
-准备一根 USB A to C 烧录线
-
-烧录线TYPE-C口 连接主板的TYPE-C口
-
-烧录线TYPE-A口 连接电脑的TYPE-A口
+准备一根 USB A to C 烧录线，用于连接烧录主机 于 开发板
 
 
 
@@ -154,10 +156,6 @@ PhoenixSuit/Drivers/AW_Driver/
 
 
 
-
-
-## 2. 系统启动
-
 ### Android桌面界面
 
 主板连接HDMI显示器，系统启动成功后，界面如下
@@ -166,9 +164,66 @@ PhoenixSuit/Drivers/AW_Driver/
 
 
 
-### Linux系统登陆用户密码
 
-Debian系统用户名/密码：kickpi/kickpi
+
+## 2. Ubuntu镜像烧录
+
+### 准备工具
+
+**硬件准备工具**
+
+准备一张16GB以上的SD卡，建议SD卡速度等级达到C10以上
+
+SD卡传输速度会影响开发板加载系统的时间
+
+
+
+**下载SD卡烧录工具**
+
+SD卡烧录工具建议使用balenaEtcher，可从网盘以下目录下载，或自行从网络下载均可
+
+```
+5-DevelopmentTools开发工具\SD卡烧录工具\balenaEtcher.exe
+```
+
+
+
+**下载镜像**
+
+镜像可从网盘以下目录获取
+
+```
+└── 2-System Image 系统镜像
+    └── K2B
+       	└── Ubuntu2204
+```
+
+
+
+### 制作SD启动卡
+
+![image-20240319142047775](http://tanzhtanzh.oss-cn-shenzhen.aliyuncs.com/img/image-20240319142047775.png)
+
+1. 选择烧录镜像
+2. 烧录SD卡磁盘
+3. 开始烧录
+
+
+
+### SD卡启动系统
+
+1. SD卡插入到 开发板
+2. 开发板上电，SD卡首次启动时间会比较长
+
+
+
+### 从SD卡拷贝到eMMC
+
+
+
+
+
+### Linux系统登陆用户密码
 
 Ubuntu系统用户名/密码：kickpi/kickpi
 
@@ -179,5 +234,4 @@ Ubuntu系统用户名/密码：kickpi/kickpi
 默认自动登录kickpi用户
 
 图形桌面依赖显示设备，开机前需要先连接HDMI或LCD
-
 
