--- a/h618/zh/04-硬件功能使用说明.md
+++ b/h618/zh/04-硬件功能使用说明.md
@@ -8,13 +8,13 @@
 
 开发板配备20Pin扩展引脚，其中包含普通GPIO、I2C、UART、SPI等接口。
 
-
+![image-20240319154848492](http://tanzhtanzh.oss-cn-shenzhen.aliyuncs.com/img/image-20240319154848492.png)
 
 
 
 ### 1.1. GPIO
 
-K1开发板的扩展40Pin引脚中默认有9路可控GPIO。
+K2B开发板的扩展20Pin引脚中默认有9路可控GPIO。
 
 首先，通过 [[扩展引脚]] 章节，确认GPIO引脚位置、编号，参考以下步骤可对指定GPIO进行状态控制。
 
@@ -50,9 +50,9 @@ $ echo 0 > /sys/class/leds/gpio3b6/brightness
 
 **开发板调试串口接线**
 
-调试串口内嵌到扩展40Pin引脚上，可通过 [[扩展引脚]] 章节 或下图查看调试串口位置
+调试串口内嵌到扩展引脚上，可通过 [[扩展引脚]] 章节 或下图查看调试串口位置
 
-![image-20231215153008926](http://tanzhtanzh.oss-cn-shenzhen.aliyuncs.com/img/image-20231215153008926.png)
+![image-20240319154747393](http://tanzhtanzh.oss-cn-shenzhen.aliyuncs.com/img/image-20240319154747393.png)
 
 
 
@@ -69,12 +69,12 @@ Mobaxterm软件地址下载：https://mobaxterm.mobatek.net/
 1. 新建会话窗口
 2. 选择会话窗口类型为serial
 3. 选择串口COM编号（打开Windows系统 设备管理器 -> 端口界面可查看COM编号）
-4. 选择串口波特率1500000
+4. 选择串口波特率115200
 5. 启动会话窗口
 
 
 
-![image-20230519113450846](http://tanzhtanzh.oss-cn-shenzhen.aliyuncs.com/img/image-20230519113450846.png)
+![image-20240319182217644](http://tanzhtanzh.oss-cn-shenzhen.aliyuncs.com/img/image-20240319182217644.png)
 
 
 
@@ -126,19 +126,7 @@ $ echo 0 > /sys/class/leds/work-led/brightness
 
 
 
-
-
-## 5. USB
-
-### OTG模式切换
-
-Android13.0系统 USB默认支持OTG模式，可自动切换主从功能
-
-Linux系统 USB默认为HOST模式，暂不支持OTG
-
-
-
-## 6. PWM
+## 3. PWM
 
 RK3568 有4个PWM模块，每个PWM模块有4路PWM，一共有16路PWM
 
@@ -162,17 +150,13 @@ $ echo 1 > /sys/class/pwm/pwmchip0/pwm0/enable
 
 
 
+## 4. WIFI
+
+K2B开发板 配备AW859A高性能WIFI模块
+
+支持2.4G/5G双频段，WIFI5，1T1R，BT5.0
 
 
-## 7. WIFI
-
-K1开发板 配备RTL8822CS高性能WIFI模块
-
-支持2.4G/5G双频段，WIFI5，2T2R
-
-
-
-![image-20231215153316513](http://tanzhtanzh.oss-cn-shenzhen.aliyuncs.com/img/image-20231215153316513.png)
 
 ### *图形界面配置WIFI
 
@@ -188,7 +172,7 @@ K1开发板 配备RTL8822CS高性能WIFI模块
 
 
 
-## 8. BlueTooth
+## 5. BlueTooth
 
 K1开发板 配备RTL8822CS高性能蓝牙模块
 
@@ -204,67 +188,40 @@ K1开发板 配备RTL8822CS高性能蓝牙模块
 
 
 
-## 9. KEY
+## 6. KEY
 
-K2B配备
+K2B配备3个按键，分别是RECOVERY KEY、RST KEY、MASKROM KEY
 
-
-
-## 10. IR
-
-
-
-## 11. SD CARD
-
-
-
-## 12. HDMI
-
-
-
-## 13. 以太网
+RECOVERY按键在UBOOT阶段可用于进入烧录模式，进入系统后作为用户自定义功能按键
 
 
 
 
 
-
-
-## 16. GPU
-
-### Debian GLmark2性能测试
-
-RK Linux文件系统内置glmark2-es性能测试工具
-
-板卡连接显示设备，打开虚拟终端 或 调试串口终端，执行以下命令开始GPU性能测试
-
-```
-$ source /rockchip-test/gpu/test_fullscreen_glmark2.sh
-
-# 终端打印最终测试成绩分数
-=======================================================
-                                  glmark2 Score: 471
-=======================================================
-```
-
-> 外接显示屏可查看GPU渲染图形，调试串口可查看GPU渲染日志
->
-> 根据GPU性能差异，大概需要等待10分钟左右可完成性能测试
+## 7. HDMI
 
 
 
-## 17. 耳机/模拟视频信号
-
-### 硬件接线
-
-耳机音频播放音频测试，若耳机完全插到底，可能会有杂音，可
-
-![image-20240123104101888](http://tanzhtanzh.oss-cn-shenzhen.aliyuncs.com/img/image-20240123104101888.png)
 
 
+## 8. 以太网
+
+
+
+
+
+## 9. 耳机
 
 ### 音频播放测试
 
-Android12.0 TV系统
+耳机音频输出默认关闭，Android12.0系统设置中开启模拟音频输出
 
-设置中开启模拟音频输出
+![image-20240301133912142](http://tanzhtanzh.oss-cn-shenzhen.aliyuncs.com/img/image-20240301133912142.png)
+
+![image-20240301133940718](http://tanzhtanzh.oss-cn-shenzhen.aliyuncs.com/img/image-20240301133940718.png)
+
+![image-20240301134005013](http://tanzhtanzh.oss-cn-shenzhen.aliyuncs.com/img/image-20240301134005013.png)
+
+![image-20240301134029929](http://tanzhtanzh.oss-cn-shenzhen.aliyuncs.com/img/image-20240301134029929.png)
+
+![image-20240301134102184](http://tanzhtanzh.oss-cn-shenzhen.aliyuncs.com/img/image-20240301134102184.png)
