--- a/h618/zh/01-快速入门文档.md
+++ b/h618/zh/01-快速入门文档.md
@@ -4,11 +4,11 @@
 
 
 
-
-
 ## 1. 主控信息
 
+### H618
 
+![image-20240320092438171](http://tanzhtanzh.oss-cn-shenzhen.aliyuncs.com/img/image-20240320092438171.png)
 
 
 
@@ -16,9 +16,9 @@
 
 ## 2. 开发板信息
 
+### K2B
 
-
-
+![7e67e08bdbb8ff7f9777006ca46ed211](http://tanzhtanzh.oss-cn-shenzhen.aliyuncs.com/img/7e67e08bdbb8ff7f9777006ca46ed211.jpg)
 
 
 
@@ -43,29 +43,28 @@ KICKPI 开发资料通过网盘方式推送，同时支持 百度网盘、OneDri
 * 网盘目录说明
 
 ```
-├── 1-SDK Source 软件源码
-│   ├── rk356x-android13
-│   └── rk356x-linux
-│       ├── buildroot-dl-20230607.tar.gz
-│       ├── linaro-rootfs-20230524.tar.gz
-│       ├── rk356x-linux-20230524.tar.gz
-│       └── ubuntu-rootfs-20230523.tar.gz
-├── 2-System Image 系统镜像
-│   └── RK3566-TX66
-│       ├── Android11-TV
-│       ├── Android13
-│       ├── Debian11
-│       └── Ubuntu2004
-│   └── RK3568-K1
-│       ├── Android13
-│       ├── Debian11
-│       └── Ubuntu2004
-├── 3-Hardware Data 硬件资料
-└── 4-Development Tools 开发工具
+├── 1-SDK软件源码
+│   └── Android12.0
+│       └── h618-android12.0-20240320.tar.gz
+├── 2-Image镜像
+│   └── K2B
+│       ├── Android12.0 Tablet
+│       │   └── h618_android12_p2_uart0-20240202.img
+│       ├── Android12.0 TV
+│       │   └── h618_android12_p2_uart0-20240302.img
+│       └── Ubuntu2204
+│           └── h618-ubuntu2204-k2b-20240319.tar.gz
+├── 3-SoftwareData软件资料
+├── 4-HardwareData硬件资料
+│   └── H618-K2B原理图.pdf
+└── 5-DevelopmentTools开发工具
     ├── ADB Tool
-    ├── UART Debug Tool 串口调试工具
-    ├── USB Driver USB驱动
-    └── USB Image Burn Tool 镜像烧录工具
+    ├── ADB投屏
+    ├── FactoryTool 工厂镜像烧录工具
+    ├── SD卡烧录工具
+    ├── SD启动卡工具
+    ├── UART DebugTool 串口调试工具
+    └── USB ImageBurnTool 镜像烧录工具
 ```
 
 
