--- a/h618/zh/03-源码编译.md
+++ b/h618/zh/03-源码编译.md
@@ -39,205 +39,7 @@ $ sudo pip install pyelftools
 
 
 
-
-
-## 2. Linux SDK编译
-
-### SDK介绍
-
-Rockchip Linux SDK由SDK源码包、文件系统镜像组成
-
-SDK源码包内核版本5.10，支持Ubuntu20.04、Debian11文件系统
-
-
-
-### 获取SDK源码
-
-**网盘下载SDK源码压缩包**
-
-网盘SDK目录如下
-
-```
-1-SDK源码\rk356x-linux\
-	rk356x-linux-*.tar.gz
-	rk356x-linux-*.md5
-```
-
-
-
-**拷贝源码压缩包到编译主机目录**
-
-> 注意事项
->
-> 1. 若编译主机为虚拟机，不可放在共享目录下编译
-
-
-
-**MD5校验文件完整性**
-
-```
-$ md5sum -c *.md5
-```
-
-
-
-**解压源码压缩包**
-
-```
-$ tar -zxvf rk356x-linux-*.tar.gz
-$ ls -al
-	.git
-```
-
-> SDK源码压缩包仅包含Git仓库，可用ls -al命令查看到.git文件夹
-
-
-
-**还原源码文件**
-
-```
-$ git reset --hard
-```
-
-
-
-
-
-### 获取Rootfs镜像
-
-* 文件系统网盘目录
-
-```
-1-SDK源码\rk356x-linux\
-	linaro-rootfs-20230524.tar.gz
-	ubuntu-rootfs-20230523.tar.gz
-```
-
-
-
-* MD5校验文件完整性
-
-```
-$ md5sum -c *.md5
-```
-
-
-
-* 解压debian镜像文件
-
-```
-$ tar -zxvf linaro-rootfs-*.tar.gz
-$ cp linaro-rootfs.img debian/
-
-$ ls debian/linaro-rootfs.img
-```
-
-> debian镜像文件的名称、目录必须保证一致
->
-> 文件系统目录：debian/linaro-rootfs.img
-
-
-
-* 解压ubuntu镜像文件
-
-```
-$ tar -zxvf ubuntu-rootfs-*.tar.gz
-$ cp ubuntu-rootfs.img.img ubuntu/
-
-$ ls ubuntu/ubuntu-rootfs.img
-```
-
-> ubuntu镜像文件的名称、目录必须保证一致
->
-> 文件系统目录：ubuntu/ubuntu-rootfs.img
-
-
-
-### 编译完整镜像
-
-首次执行build.sh进行SDK编译，必须要选择编译配置信息，如：CPU型号、板卡型号、文件系统型号
-
-具体板卡型号差异可查看 `入门文档介绍`
-
-
-
-* SDK编译配置
-
-```
-$ ./build.sh lunch
-	
-    You're building on Linux
-    Lunch menu...pick a combo:
-    1. rk356x
-    2. rk3588
-    Which would you like? [0]:	# 选择CPU型号
-
-    You're building on Linux
-    Lunch menu...pick a combo:
-	1. BoardConfig-rk3566-kickpi-tx66.mk
-	2. BoardConfig-rk3568-kickpi-tx68.mk
-    Which would you like? [0]:	# 选择板卡型号
-
-    You're building on Linux
-    Lunch menu...pick a combo:
-    0. default RootfsConfig.mk
-    1. RootfsConfig-buildroot.mk
-    2. RootfsConfig-debian.mk
-    3. RootfsConfig-ubuntu.mk
-    Which would you like? [0]:	# 选择文件系统型号
-```
-
-> 配置命令首次编译执行一次即可
-
-
-
-* 编译镜像
-
-```
-$ ./build.sh
-```
-
-> 镜像生成目录：rockdev/update-\*.img
->
-> 若编译失败，可尝试自行解决，亦可联系技术支持客服解决
-
-
-
-### 单独编译分区镜像
-
-**单独编译Uboot**
-
-```
-$ ./build.sh uboot
-```
-
-> 镜像生成目录：rockdev/uboot.img
-
-
-
-**单独编译Kernel**
-
-```
-$ ./build.sh kernel
-```
-
-> 镜像生成目录：rockdev/boot.img
-
-
-
-**单独编译Buildroot**
-
-```
-$ ./build.sh buildroot
-```
-
-> 镜像生成目录：rockdev/rootfs.img
-
-
-
-
-
-## 3. Android SDK编译
+## 2. Android SDK编译
 
 ### SDK介绍
 
@@ -251,18 +53,22 @@ Android系统版本：12.0
 
 ### 获取SDK源码
 
-* 网盘目录
+* 网盘下载目录
 
 ```
-1-SDK源码\rk356x-android13\
-	rk356x-android13-*.tar.gz
+1-SDK软件源码\Android12.0\
+	h618-android12.0-20240320.tar.gz
 ```
 
 
 
 * 拷贝源码压缩包到编译主机目录
 
-  若编译主机为虚拟机，不可放在共享目录下编译
+  > 注意事项：
+  >
+  > 1. 源码不可放在共享目录下编译
+  >
+  > 2. 编译主机不可用ROOT账号登陆
 
 
 
@@ -274,12 +80,35 @@ $ md5sum -c *.md5
 
 
 
+* 合并源码压缩包
+
+```
+$ cat *tar.gz_0* > sdk.tar.gz
+```
+
+> 原始压缩包默认可能超过100G以上，所以采用分包压缩的方式
+>
+> 在解压前，需要先把压缩包合并起来
+
+
+
 * 解压源码压缩包
 
 ```
 $ tar -zxvf rk356x-android13-*.tar.gz
+```
+
+> 解压完成后，查看源码目录仅有.git文件夹，需要执行下一步才能完成恢复出源码
+
+
+
+* Git恢复源码目录
+
+```
 $ git reset --hard
 ```
+
+
 
 
 
@@ -351,3 +180,11 @@ $ ./build.sh -A
 ```
 
 > 镜像生成目录：rockdev/Image-\*/super.img
+
+
+
+
+
+## 3. Linux SDK编译
+
+Ubuntu22.04 系统 仅提供镜像文件，编译可参考 ARMBIAN SDK
