--- a/rk356x/zh/23-RK3568 LCD配置.md
+++ b/rk356x/zh/23-RK3568 LCD配置.md
@@ -1,6 +1,6 @@
-# 23-Android三屏异显
+# 23-RK3568 LCD配置
 
-
+RK3568 配备四路显示输出接口，分别为 HDMI、MIPI、LVDS、EDP，其中最高支持三路同时显示输出
 
 
 
@@ -38,7 +38,7 @@ RK3568 有三个VP节点，每个VP节点可挂接一个显示屏，对应关系
 显示屏配置 主要修改设备树LCD配置文件，RK3568 设备树LCD配置目录如下：
 
 ```
-$ vim kernel/arch/arm64/boot/dts/rockchip/rk3568-kickpi-k1a.dtsi
+$ vim kernel/arch/arm64/boot/dts/rockchip/rk3568-kickpi-k1.dtsi
 
 // LCD
 //#include "rk3568-kickpi-lcd-hdmi.dtsi"
