--- a/h618/zh/03-源码编译.md
+++ b/h618/zh/03-源码编译.md
@@ -95,7 +95,7 @@ $ cat *tar.gz_0* > sdk.tar.gz
 * 解压源码压缩包
 
 ```
-$ tar -zxvf rk356x-android13-*.tar.gz
+$ tar -zxvf *.tar.gz
 ```
 
 > 解压完成后，查看源码目录仅有.git文件夹，需要执行下一步才能完成恢复出源码
@@ -114,40 +114,11 @@ $ git reset --hard
 
 ### 编译完整镜像
 
-根据CPU型号，选择对应编译命令；若编译失败，可尝试自行解决，或联系技术客服解决
-
-**配置SDK编译项**
-
 ```
-$ ./build.sh lunch
-
-	will lunch sdk
-
-	You're building on Linux
-	Lunch menu...pick a combo:
-
-	1. rk356x
-	2. rk3588
-	Which would you like? [0]:
-
-	You're building on Linux
-	Lunch menu...pick a combo:
-
-	1. BoardConfig.mk
-	2. BoardConfig-rk3566-kickpi-tx66.mk
-	3. BoardConfig-rk3568-kickpi-k1a.mk
-	4. BoardConfig-rk3568-kickpi-k1b.mk
+$ ./build.sh
 ```
 
-
-
-**编译完整镜像**
-
-```
-$ ./build.sh -AUCKu
-```
-
-> 镜像生成目录：rockdev/Image-*/update-\*.img
+> 镜像生成目录：longan/out/h618_android12_p2_uart0.img
 
 
 
@@ -156,30 +127,30 @@ $ ./build.sh -AUCKu
 **单独编译Uboot**
 
 ```
-$ ./build.sh -U
+$ ./build.sh uboot
 ```
 
-> 镜像生成目录：rockdev/Image-\*/uboot.img
+> 镜像生成目录：longan/out/h618_android12_p2_uart0.img
 
 
 
 **单独编译Kernel**
 
 ```
-$ ./build.sh -CK
+$ ./build.sh kernel
 ```
 
-> 镜像生成目录：rockdev/Image-\*/boot.img
+> 镜像生成目录：longan/out/h618_android12_p2_uart0.img
 
 
 
 **单独编译Android**
 
 ```
-$ ./build.sh -A
+$ ./build.sh android
 ```
 
-> 镜像生成目录：rockdev/Image-\*/super.img
+> 镜像生成目录：longan/out/h618_android12_p2_uart0.img
 
 
 
