--- a/h618/zh/02-镜像烧录.md
+++ b/h618/zh/02-镜像烧录.md
@@ -215,9 +215,29 @@ SD卡烧录工具建议使用balenaEtcher，可从网盘以下目录下载，或
 1. SD卡插入到 开发板
 2. 开发板上电，SD卡首次启动时间会比较长
 
+![image-20240321141105541](http://tanzhtanzh.oss-cn-shenzhen.aliyuncs.com/img/image-20240321141105541.png)
+
 
 
 ### 从SD卡拷贝到eMMC
+
+1. 进入BananaPi config
+
+![image-20240321141417804](http://tanzhtanzh.oss-cn-shenzhen.aliyuncs.com/img/image-20240321141417804.png)
+
+2. 输入用户密码（密码：kickpi）
+
+![image-20240321141607099](http://tanzhtanzh.oss-cn-shenzhen.aliyuncs.com/img/image-20240321141607099.png)
+
+3. 进入BananaPi config界面后，一直按回车即可
+
+![image-20240321141840923](http://tanzhtanzh.oss-cn-shenzhen.aliyuncs.com/img/image-20240321141840923.png)
+
+4. 开始拷贝镜像到eMMC
+
+![image-20240321142005534](http://tanzhtanzh.oss-cn-shenzhen.aliyuncs.com/img/image-20240321142005534.png)
+
+5. 拔出SD卡，重启主板，正常进入UBUNTU系统
 
 
 
@@ -229,9 +249,5 @@ Ubuntu系统用户名/密码：kickpi/kickpi
 
 
 
-### Linux图形桌面登陆
 
-默认自动登录kickpi用户
-
-图形桌面依赖显示设备，开机前需要先连接HDMI或LCD
 
