--- a/h618/zh/12-硬件功能测试.md
+++ b/h618/zh/12-硬件功能测试.md
@@ -1,4 +1,4 @@
-# 04-硬件功能使用说明
+# 12-硬件功能使用说明
 
 
 
@@ -12,7 +12,7 @@
 
 
 
-### 1.1. GPIO
+## 2. GPIO
 
 K2B开发板的扩展20Pin引脚中默认有9路可控GPIO。
 
@@ -42,7 +42,7 @@ $ echo 0 > /sys/class/leds/gpio3b6/brightness
 
 
 
-### 1.2. 调试串口使用
+## 3. 调试串口使用
 
 **开发板调试串口接线**
 
