--- a/rk356x/zh/10-系统镜像烧录.md
+++ b/rk356x/zh/10-系统镜像烧录.md
@@ -1,4 +1,4 @@
-# 02-镜像烧录
+# 10-系统镜像烧录
 
 
 
@@ -154,8 +154,6 @@ Maskrom模式 常用于系统损坏后，强制烧录镜像
 4. 选择镜像路径
 5. 开始烧录镜像
 6. 查看 烧录日志，烧录成功后自动重启进入系统
-
-
 
 
 
