--- a/rk356x/zh/14-硬件老化测试.md
+++ b/rk356x/zh/14-硬件老化测试.md
@@ -1,6 +1,8 @@
-# 06-硬件老化测试
+# 14-硬件老化测试
 
-硬件工厂测试 是基于DeviceTest 应用程序 的硬件老化测试，主要针对CPU、DDR、GPU、VPU老化测试。
+硬件工厂测试 是基于DeviceTest 应用程序 的硬件老化测试
+
+主要针对CPU、DDR、GPU、VPU老化测试
 
 
 
