--- a/h618/zh/12-硬件功能测试.md
+++ b/h618/zh/12-硬件功能测试.md
@@ -24,21 +24,29 @@ K2B开发板的扩展20Pin引脚中默认有9路可控GPIO。
 
 ```
 $ ls /sys/class/leds/
-
-gpio1b0/ gpio1b2/ gpio1d4/ gpio3b6/ 
-gpio1a4/ gpio1b1/ gpio1d0/ gpio3b5/ gpio4c4/
+	PC7  PC12  PI6  sys_led
 ```
 
 
 
-**命令行控制GPIO**
+**命令行控制GPIO电平**
 
 ```
-$ echo 1 > /sys/class/leds/gpio3b6/brightness
-$ echo 0 > /sys/class/leds/gpio3b6/brightness
+$ echo 1 > /sys/class/leds/sys_led/brightness
+$ echo 0 > /sys/class/leds/sys_led/brightness
 ```
 
 
+
+**读取GPIO电平**
+
+```
+$ cat /sys/class/leds/sys_led/brightness
+```
+
+> 0为低电平
+>
+> 255为高电平
 
 
 
@@ -115,6 +123,26 @@ K2B开发板 配备AW859A高性能WIFI模块
 K2B配备3个按键，分别是RECOVERY KEY、RST KEY、MASKROM KEY
 
 RECOVERY按键在UBOOT阶段可用于进入烧录模式，进入系统后作为用户自定义功能按键
+
+
+
+### 自定义按键功能
+
+```
+        gpio-keys {
+                compatible = "gpio-keys";
+                status = "okay";
+                autorepeat;
+
+                power {
+                        label = "Power Key";
+                        linux,code = <KEY_POWER>;
+                        gpio = <&pio PC 2 GPIO_ACTIVE_LOW>;     /* PC7 */
+                        wakeup-source;
+                        debounce-interval = <100>;
+                };
+        };
+```
 
 
 
