--- a/h618/zh/12-硬件功能测试.md
+++ b/h618/zh/12-硬件功能测试.md
@@ -50,7 +50,7 @@ $ cat /sys/class/leds/sys_led/brightness
 
 
 
-## 3. 调试串口使用
+## 3. 调试串口
 
 **开发板调试串口接线**
 
@@ -79,6 +79,14 @@ Mobaxterm软件地址下载：https://mobaxterm.mobatek.net/
 
 
 ![image-20240319182217644](http://tanzhtanzh.oss-cn-shenzhen.aliyuncs.com/img/image-20240319182217644.png)
+
+
+
+
+
+## 4. 普通串口
+
+
 
 
 
