--- a/a133/zh/10-系统镜像烧录.md
+++ b/a133/zh/10-系统镜像烧录.md
@@ -42,11 +42,8 @@ a133_data/2-Image镜像/
 
 > 镜像说明：
 >
-> ​	开发板提供3个镜像，分别是Android12 TV 、Android12 Tablet、Ubuntu2004
+> ​	开发板提供1个镜像，是Android10 Tablet
 >
-> ​	TV 跟 Tablet 都是由Android12.0 SDK编译出来，只是桌面界面区别
->
-> ​	TV是机顶盒界面，Tablet是平板界面，可按需下载
 
 
 
