--- a/a133/zh/10-系统镜像烧录.md
+++ b/a133/zh/10-系统镜像烧录.md
@@ -155,7 +155,7 @@ PhoenixSuit/Drivers/AW_Driver/
 
 ### Android桌面界面
 
-主板连接HDMI显示器，系统启动成功后，界面如下
+主板连接 Mipi / LVDS 显示器，系统启动成功后，界面如下
 
 ![image-20240306171855522](http://tanzhtanzh.oss-cn-shenzhen.aliyuncs.com/img/image-20240306171855522.png)
 
