--- a/a133/zh/10-系统镜像烧录.md
+++ b/a133/zh/10-系统镜像烧录.md
@@ -153,7 +153,7 @@ PhoenixSuit/Drivers/AW_Driver/
 
 ### Android桌面界面
 
-根据对应屏的镜像，主板连接对应Mipi或LVDS显示器，系统启动成功后，界面如下
+根据对应屏的镜像，主板连接对应Mipi或LVDS屏幕，系统启动成功后，界面如下
 
 ![image-20240306171855522](http://tanzhtanzh.oss-cn-shenzhen.aliyuncs.com/img/image-20240306171855522.png)
 
