--- a/a133/zh/10-系统镜像烧录.md
+++ b/a133/zh/10-系统镜像烧录.md
@@ -175,7 +175,7 @@ PhoenixSuit/Drivers/AW_Driver/
 >
 > 烧录工具 PhoenixCard 在 <5-DevelopmentTools开发工具\SD启动卡工具\PhoenixCard.rar>
 >
-> Android镜像 在 <2-Image镜像\K2B\Android12.0 TV>
+> Android镜像 在 <2-Image镜像\K5\Android10.0>
 
 
 
