--- a/a133/zh/12-硬件功能测试.md
+++ b/a133/zh/12-硬件功能测试.md
@@ -4,7 +4,7 @@
 
 
 
-## 1. 扩展引脚
+## 1. 扩展引脚 <a name="扩展引脚"></a>
 
 开发板配备20Pin扩展引脚，其中包含普通GPIO、I2C、UART、SPI等接口。
 
@@ -54,7 +54,7 @@ $ cat /sys/class/leds/sys_led/brightness
 
 **开发板调试串口接线**
 
-调试串口内嵌到扩展引脚上，可通过 [[扩展引脚]] 章节 或下图查看调试串口位置
+调试串口内嵌到扩展引脚上，可通过 (# 1. 扩展引脚) 章节 或下图查看调试串口位置
 
 ![image-20240319154747393](http://tanzhtanzh.oss-cn-shenzhen.aliyuncs.com/img/image-20240319154747393.png)
 
