--- a/a133/zh/12-硬件功能使用说明.md
+++ b/a133/zh/12-硬件功能使用说明.md
@@ -175,11 +175,11 @@ K5开发板支持LVDS和MIPI接口
 ### MIPI
 **硬件接线**
 
-### 单端口LVDS
+### Single LVDS
 **硬件接线**
 LVDS_LCD端口
 
-### 双端口LVDS
+### DUAL LVDS
 **硬件接线**
 DUAL_LVDS端口
 
