--- a/a133/zh/12-硬件功能使用说明.md
+++ b/a133/zh/12-硬件功能使用说明.md
@@ -171,25 +171,26 @@ DUAL_LVDS端口
 
 LVDS供电电压可选3.3V、5V、12V，必须根据规格书选择对应电压，否则会不能点亮或烧屏
 
-### MIPI CAMERA
+## MIPI CAMERA
 
-### GPU
+## GPU
 
-### NPU
+## NPU
 
-### MPP
+## MPP
 
-### ADC
+## ADC
 
 A133 配备X路ADC，K5开发板引出ADC3通道到扩展引脚座
 
-### FAN
+## FAN
 
 风扇供电电压为5V，连接方式如下图所示
 
-### 4G通讯模块
+## 4G通讯模块
 
-### 喇叭
+
+## 喇叭
 
 ## 耳机
 
