--- a/a133/zh/12-硬件功能使用说明.md
+++ b/a133/zh/12-硬件功能使用说明.md
@@ -184,6 +184,8 @@ A133 配备X路ADC，K5开发板引出ADC3通道到扩展引脚座
 ## 4G通讯模块
 
 ## 喇叭
+**硬件接线**
+![image-20240319182217644](http://tanzhtanzh.oss-cn-shenzhen.aliyuncs.com/img/image-20240319182217644.png)
 
 ## 耳机
 
