--- a/a133/zh/12-硬件功能使用说明.md
+++ b/a133/zh/12-硬件功能使用说明.md
@@ -163,10 +163,12 @@ K5开发板支持LVDS和MIPI接口
 
 ### Single LVDS
 **硬件接线**
-LVDS_LCD端口
+
+Single LVDS 和 MIPI 复用同一端口
 
 ### DUAL LVDS
 **硬件接线**
+
 DUAL_LVDS端口
 
 LVDS供电电压可选3.3V、5V、12V，必须根据规格书选择对应电压，否则会不能点亮或烧屏
