--- a/a133/zh/12-硬件功能使用说明.md
+++ b/a133/zh/12-硬件功能使用说明.md
@@ -171,9 +171,7 @@ Single LVDS 和 MIPI 复用同一端口
 ### DUAL LVDS
 **硬件接线**
 
-DUAL_LVDS端口
-
-LVDS供电电压可选3.3V、5V、12V，必须根据规格书选择对应电压，否则会不能点亮或烧屏
+DUAL LVDS供电电压可选3.3V、5V、12V，必须根据规格书选择对应电压，否则会不能点亮或烧屏
 
 ## MIPI CAMERA
 
