--- a/a133/zh/12-硬件功能使用说明.md
+++ b/a133/zh/12-硬件功能使用说明.md
@@ -98,14 +98,14 @@ Mobaxterm软件地址下载：https://mobaxterm.mobatek.net/
 5. 启动会话窗口
 
 
-
 ![image-20240319182217644](http://tanzhtanzh.oss-cn-shenzhen.aliyuncs.com/img/image-20240319182217644.png)
 
 
 ## 普通串口
 
+**注册结点后**
 ```
-dev/
+$ ls dev/tty*
 ```
 
 ## WIFI / BlueTooth
