--- a/rv1106/zh/10-系统镜像烧录.md
+++ b/rv1106/zh/10-系统镜像烧录.md
@@ -15,14 +15,7 @@
 镜像烧录 准备工具如下所示
 
 ```
-├── 2-System Image 系统镜像
-│   └── RK3568-K1
-│       ├── Android13
-│       ├── Debian11
-│       └── Ubuntu2004
-└── 4-Development Tools 开发工具
-    ├── USB Driver USB驱动
-    └── USB Image Burn Tool 镜像烧录工具
+TODO
 ```
 
 > 镜像烧录 必须下载 USB驱动、镜像烧录工具
