--- a/rv1106/zh/10-系统镜像烧录.md
+++ b/rv1106/zh/10-系统镜像烧录.md
@@ -28,7 +28,7 @@ TODO
 
 USB驱动网盘目录：4-开发工具\USB驱动\DriverAssitant\_v5.12.zip
 
-![image-20230526154517334](http://tanzhtanzh.oss-cn-shenzhen.aliyuncs.com/img/image-20230526154517334.png)
+![image]()
 
 
 
