--- a/rv1106/zh/10-系统镜像烧录.md
+++ b/rv1106/zh/10-系统镜像烧录.md
@@ -56,31 +56,28 @@ TODO
 
 ### 安装镜像烧录工具
 
-镜像烧录工具网盘目录：4-开发工具\USB镜像烧录工具\RKDevTool\_Release\_v2.96.zip
-
+镜像烧录工具网盘目录：
 
 
 1. 通过网盘下载镜像烧录工具后，解压文件夹，得到以下目录列表
-
 
 
 2. 修改镜像烧录工具语言（可选）
 
 默认镜像烧录工具为中文界面，可按照如下所示修改为英文界面
 
-![img](http://tanzhtanzh.oss-cn-shenzhen.aliyuncs.com/img/image-20231010202819610.png)
+![img]()
 
-![img](http://tanzhtanzh.oss-cn-shenzhen.aliyuncs.com/img/image-20231010203036869.png)
-
+![img]()
 
 
 3. 打开烧录工具
 
-![image-20231017114016561](http://tanzhtanzh.oss-cn-shenzhen.aliyuncs.com/img/image-20231017114016561.png)
+![image-20231017114016561]()
 
 4. 烧录工具界面如下
 
-![image-20230526154741821](http://tanzhtanzh.oss-cn-shenzhen.aliyuncs.com/img/image-20230526154741821.png)
+![image-20230526154741821]()
 
 
 
