--- a/h618/zh/12-硬件功能测试.md
+++ b/h618/zh/12-硬件功能测试.md
@@ -31,10 +31,23 @@ $ ls /sys/class/leds/
 
 **命令行控制GPIO电平**
 
-```
+```shell
 $ echo 1 > /sys/class/leds/sys_led/brightness
 $ echo 0 > /sys/class/leds/sys_led/brightness
 ```
+
+
+
+目前PC7、PC12 的设备结点在 /sys/class/gpio_sw 下 ，操作GPIO 用下面的命令
+
+```shell
+// 拉高GPIO
+$ echo 1 > /sys/class/gpio_sw/PC12/data
+// 拉低GPIO
+$ echo 0 > /sys/class/gpio_sw/PC12/data
+```
+
+
 
 
 
