--- a/a133/zh/10-系统镜像烧录.md
+++ b/a133/zh/10-系统镜像烧录.md
@@ -65,6 +65,13 @@ PhoenixSuit/Drivers/AW_Driver/
 
 
 
+**通过串口进入烧录模式**
+
+1. 串口按住2
+2. 上电
+
+
+
 **主板进入烧录模式**
 
 1. 按住 FEL升级键
@@ -199,7 +206,6 @@ PhoenixCard.rar 直接解压后打开即可，打开界面如下
 ### 启动Android系统
 
 插入烧录好的SD卡到开发板，上电启动即可自动
-
 
 
 
