--- a/a133/zh/10-系统镜像烧录.md
+++ b/a133/zh/10-系统镜像烧录.md
@@ -65,14 +65,14 @@ PhoenixSuit/Drivers/AW_Driver/
 
 
 
-**通过串口进入烧录模式**
+**串口方式进入烧录模式**
 
-1. 串口按住2
-2. 上电
+1. 串口输入按住 2
+2. 主板上电，如果已上电则需重新上电（按一下复位键）
 
 
 
-**主板进入烧录模式**
+**按键方式进入烧录模式**
 
 1. 按住 FEL升级键
 2. 主板上电，如果已上电则需重新上电（按一下复位键）
