--- a/rv1106/zh/10-系统镜像烧录.md
+++ b/rv1106/zh/10-系统镜像烧录.md
@@ -56,28 +56,9 @@ TODO
 
 ### 安装镜像烧录工具
 
-镜像烧录工具网盘目录：
 
 
-1. 通过网盘下载镜像烧录工具后，解压文件夹，得到以下目录列表
-
-
-2. 修改镜像烧录工具语言（可选）
-
-默认镜像烧录工具为中文界面，可按照如下所示修改为英文界面
-
-![img]()
-
-![img]()
-
-
-3. 打开烧录工具
-
-![image-20231017114016561]()
-
-4. 烧录工具界面如下
-
-![image-20230526154741821]()
+SocToolKit.exe
 
 
 
@@ -131,34 +112,11 @@ Maskrom模式 常用于系统损坏后，强制烧录镜像
 
 #### 烧录分区镜像
 
-![image-20230926170256112](http://tanzhtanzh.oss-cn-shenzhen.aliyuncs.com/img/image-20230926170256112.png)
 
-操作步骤：
-
-1. 烧录工具 成功识别板卡设备（若识别不到，返回上一步确认操作）
-2. 进入分区镜像烧录页面
-3. 勾选烧录分区项
-4. 选择镜像路径
-5. 开始烧录镜像
-6. 查看 烧录日志，烧录成功后自动重启进入系统
 
 
 
 ## 2. 系统启动
-
-### Linux系统登陆用户密码
-
-Debian系统用户名/密码：linaro/linaro
-
-Ubuntu系统用户名/密码：kickpi/kickpi
-
-
-
-### 图形桌面登陆
-
-默认自动登录kickpi用户
-
-图形桌面依赖显示设备，开机前需要先连接HDMI或LCD
 
 
 
