--- a/rv1106/zh/10-系统镜像烧录.md
+++ b/rv1106/zh/10-系统镜像烧录.md
@@ -56,9 +56,10 @@ TODO
 
 ### 烧录工具
 
-
-
-SocToolKit.exe
+| ⼯具名称       | ⼯具⽤途     |
+| -------------- | ------------ |
+| SocToolKit     | 固件升级⼯具 |
+| DriverAssitant | 驱动安装⼯具 |
 
 
 
