--- a/rv1106/zh/12-硬件功能使用说明.md
+++ b/rv1106/zh/12-硬件功能使用说明.md
@@ -27,3 +27,13 @@ K6B串口使用RV1106 UART2
 
 
 
+```
+huangcm@sunhao:~/sdk/rv1106-linux/project/app/bluetooth_app/bluez-master/tools$ cat /etc/default/tftpd-hpa
+# /etc/default/tftpd-hpa
+
+TFTP_USERNAME="tftp"
+TFTP_DIRECTORY="/srv/tftp"
+TFTP_ADDRESS=":69"
+TFTP_OPTIONS="--secure"
+```
+
