--- a/rv1106/zh/12-硬件功能使用说明.md
+++ b/rv1106/zh/12-硬件功能使用说明.md
@@ -20,17 +20,17 @@ K6B串口使用RV1106 UART2
 
 ## TFTP
 
-环境配置
+服务器环境配置
 
 ```
+sudo apt install tftpd-hpa 	tftp-hpa tftp
 ```
 
 
 
 ```
-huangcm@sunhao:~/sdk/rv1106-linux/project/app/bluetooth_app/bluez-master/tools$ cat /etc/default/tftpd-hpa
+$ cat /etc/default/tftpd-hpa
 # /etc/default/tftpd-hpa
-
 TFTP_USERNAME="tftp"
 TFTP_DIRECTORY="/srv/tftp"
 TFTP_ADDRESS=":69"
