--- a/rk356x/zh/12-硬件功能测试.md
+++ b/rk356x/zh/12-硬件功能测试.md
@@ -14,7 +14,7 @@
 
 ### K1B引脚列表
 
-![img](https://img.alicdn.com/imgextra/i3/2216870748091/O1CN01DXVv1029djTg4aiYL_!!2216870748091.jpg)
+![image-20240914152349051](http://tanzhtanzh.oss-cn-shenzhen.aliyuncs.com/img/image-20240914152349051.png)
 
 
 
@@ -113,6 +113,14 @@ Mobaxterm软件地址下载：https://mobaxterm.mobatek.net/
 
 
 ![image-20230519113450846](http://tanzhtanzh.oss-cn-shenzhen.aliyuncs.com/img/image-20230519113450846.png)
+
+
+
+### 普通串口使用
+
+
+
+
 
 
 
