--- a/rv1106/zh/10-系统镜像烧录.md
+++ b/rv1106/zh/10-系统镜像烧录.md
@@ -26,10 +26,6 @@ TODO
 
 ### 安装USB驱动
 
-USB驱动网盘目录：4-开发工具\USB驱动\DriverAssitant\_v5.12.zip
-
-![image]()
-
 
 
 ### 获取镜像文件
@@ -41,16 +37,8 @@ SDK编译详细步骤参考文档 \[02-SDK编译]
 镜像文件网盘目录：
 
 ```
-TODO
+
 ```
-
-
-
-镜像名称解析
-
-![image]()
-
-
 
 
 
@@ -77,11 +65,9 @@ Maskrom模式 常用于系统损坏后，强制烧录镜像
 
 1. Window 电脑上打开烧录工具（参考以上说明安装烧录工具）
 2. 开发板OTG（USB-Type C）接口连接电脑 USB 接口
-3. 保持长按 RECOVERY按键，并且连接DC电源供电接口
-4. 查看 镜像烧录工具 是否正常识别Loader设备
-5. 若正常识别到Loader设备，则可松开RECOVERY按键，否则重复上述步骤多尝试几次
-
-
+3. 保持长按 RECOVERY 按键，按下 RESET 键
+4. 查看 镜像烧录工具 是否正常识别 Loader 设备
+5. 若正常识别到 Loader 设备，则可松开 RECOVERY 按键，否则重复上述步骤多尝试几次
 
 
 
@@ -89,9 +75,9 @@ Maskrom模式 常用于系统损坏后，强制烧录镜像
 
 烧录镜像 分为 完整镜像烧录 和 分区镜像烧录
 
-**完整镜像烧录** 常用于刷机 或 开发板更换不同系统
+完整镜像烧录 常用于刷机 或 开发板更换不同系统
 
-**分区镜像烧录** 常用于调试阶段，必须明确每个分区的作用再进行烧录，否则会导致系统损坏
+分区镜像烧录 常用于调试阶段，必须明确每个分区的作用再进行烧录，否则会导致系统损坏
 
 
 
@@ -99,13 +85,13 @@ Maskrom模式 常用于系统损坏后，强制烧录镜像
 
 1. 打开 SocToolKit.exe 软件，选择RV1106，点击OK
 
-![image-20240909114221798](C:\Users\16708\AppData\Roaming\Typora\typora-user-images\image-20240909114221798.png)
+![image-20240909114221798](http://tanzhtanzh.oss-cn-shenzhen.aliyuncs.com/img/image-20240909114221798.png)
 
 2. 主板进入烧录模式，USB设备能看到设备信息
 3. 点击固件，选择 update.img 镜像的文件路径
 4. 点击升级，右侧信息框内能看到烧录信息
 
-![image-20240909114241258](C:\Users\16708\AppData\Roaming\Typora\typora-user-images\image-20240909114241258.png)
+![image-20240909114241258](http://tanzhtanzh.oss-cn-shenzhen.aliyuncs.com/img/image-20240909114241258.png)
 
 5. 烧录成功后自动重启进入系统
 
