--- a/h618/zh/12-硬件功能测试.md
+++ b/h618/zh/12-硬件功能测试.md
@@ -14,29 +14,13 @@
 
 ## 2. GPIO
 
-K2B开发板的扩展20Pin引脚中默认有9路可控GPIO。
+K2B开发板的扩展20Pin引脚中最多支持12路GPIO。
 
 首先，通过 [[扩展引脚]] 章节，确认GPIO引脚位置、编号，参考以下步骤可对指定GPIO进行状态控制。
 
 
 
-**查看GPIO注册列表**
-
-```
-$ ls /sys/class/leds/
-	PC7  PC12  PI6  sys_led
-```
-
-
-
 **命令行控制GPIO电平**
-
-```shell
-$ echo 1 > /sys/class/leds/sys_led/brightness
-$ echo 0 > /sys/class/leds/sys_led/brightness
-```
-
-
 
 目前PC7、PC12 的设备结点在 /sys/class/gpio_sw 下 ，操作GPIO 用下面的命令
 
