--- a/h618/zh/12-硬件功能测试.md
+++ b/h618/zh/12-硬件功能测试.md
@@ -29,6 +29,8 @@ K2B开发板的扩展20Pin引脚中最多支持12路GPIO。
 $ echo 1 > /sys/class/gpio_sw/PC12/data
 // 拉低GPIO
 $ echo 0 > /sys/class/gpio_sw/PC12/data
+// 读取GPIO电平
+$ cat /sys/class/gpio_sw/PC12/data
 ```
 
 
