--- a/h618/zh/12-硬件功能测试.md
+++ b/h618/zh/12-硬件功能测试.md
@@ -35,17 +35,16 @@ $ cat /sys/class/gpio_sw/PC12/data
 
 
 
-
-
-**读取GPIO电平**
+**命令行控制LED**
 
 ```
+// 拉高GPIO
+$ echo 1 > /sys/class/leds/sys_led/brightness
+// 拉低GPIO
+$ echo 0 > /sys/class/leds/sys_led/brightness
+// 读取GPIO电平
 $ cat /sys/class/leds/sys_led/brightness
 ```
-
-> 0为低电平
->
-> 255为高电平
 
 
 
