--- a/t113-s3/zh/12-硬件功能测试.md
+++ b/t113-s3/zh/12-硬件功能测试.md
@@ -6,3 +6,55 @@
 
 ## LVDS
 
+
+
+
+
+
+
+## 耳机
+
+
+
+
+
+## 喇叭
+
+
+
+
+
+## 麦克风
+
+
+
+
+
+
+
+## WIFI
+
+
+
+
+
+
+
+## 蓝牙
+
+
+
+
+
+
+
+## RTC
+
+
+
+
+
+## 4G Mobile
+
+
+
