--- a/a133/zh/10-系统镜像烧录.md
+++ b/a133/zh/10-系统镜像烧录.md
@@ -1,8 +1,6 @@
 # 10-系统镜像烧录
 
-K5 目前提供 Android10.0 镜像
-
-Android10.0 可使用 `USB烧录线` 把镜像烧录到板载eMMC
+K5 目前提供 Android10.0 镜像, 可使用 `USB烧录线` 把镜像烧录到板载eMMC
 
 
 
