--- a/rv1106/zh/12-硬件功能使用说明.md
+++ b/rv1106/zh/12-硬件功能使用说明.md
@@ -42,5 +42,34 @@ TFTP_OPTIONS="--secure"
 
 
 
+## 显示
+
+```
+$ cat /sys/kernel/debug/dri/0/summary
+
+VOP [ff990000.vop]: ACTIVE
+    Connector: DPI-1
+        bus_format[1009]: RGB666_1X18
+        overlay_mode[0] output_mode[1] color_space[0]
+    Display mode: 480x272p60
+        clk[9500] real_clk[31250] type[48] flag[a]
+        H: 480 488 492 535
+        V: 272 280 284 296
+    win1-0: ACTIVE
+        format: XR24 little-endian (0x34325258) SDR[0] color_space[0]
+        csc: y2r[0] r2r[0] r2y[0] csc mode[0]
+        zpos: 0
+        src: pos[0x0] rect[480x272]
+        dst: pos[0x0] rect[480x272]
+        buf[0]: addr: 0x07080000 pitch: 1920 offset: 0
+    post: sdr2hdr[0] hdr2sdr[0]
+    pre : sdr2hdr[0]
+    post CSC: r2y[0] y2r[0] CSC mode[1]
+```
+
+
+
+
+
 
 
