--- a/a133/zh/10-系统镜像烧录.md
+++ b/a133/zh/10-系统镜像烧录.md
@@ -1,5 +1,7 @@
 # 10-系统镜像烧录
 
+[TOC]
+
 K5 目前提供 Android10.0 镜像, 可使用 `USB烧录线` 把镜像烧录到板载eMMC
 
 
@@ -99,9 +101,7 @@ PhoenixSuit/Drivers/AW_Driver/
 
 ### 安装镜像烧录工具
 
-**解压PhoenixSuit.zip**
-
-**打开PhoenixSuit.exe**
+**解压PhoenixSuit.zip，打开PhoenixSuit.exe**
 
 ![image-20240306170759670](http://tanzhtanzh.oss-cn-shenzhen.aliyuncs.com/img/image-20240306170759670.png)
 
@@ -144,6 +144,6 @@ PhoenixSuit/Drivers/AW_Driver/
 
 ### Android桌面界面
 
-根据对应屏的镜像，主板连接对应Mipi或LVDS屏幕，系统启动成功后，界面如下
+根据对应屏的镜像，主板连接对应 LVDS 屏幕，系统启动成功后，界面如下
 
-
+![Screenshot_20240824-164757](http://tanzhtanzh.oss-cn-shenzhen.aliyuncs.com/img/Screenshot_20240824-164757.png)
