--- a/rv1106/zh/12-硬件功能使用说明.md
+++ b/rv1106/zh/12-硬件功能使用说明.md
@@ -16,6 +16,36 @@ K6B串口使用RV1106  UART2
 
 **linux 平台命令行**
 
+```shell
+# vi /etc/wpa_supplicant.conf
+# cat /etc/wpa_supplicant.conf
+ctrl_interface=/var/run/wpa_supplicant
+ap_scan=1
+update_config=1
+
+network={
+        ssid="wifi_oranth_2.4"
+        psk="123456789"
+        key_mgmt=WPA-PSK
+}
+# wpa_supplicant -D nl80211 -i wlan0 -c /etc/wpa_supplicant.conf -B
+# reboot
+```
+
+
+
+## BT
+
+```
+hciconfig -a
+hciconfig hci0 up
+hcitool scan
+```
+
+
+
+
+
 
 
 ## TFTP
@@ -68,6 +98,12 @@ VOP [ff990000.vop]: ACTIVE
 ```
 
 
+
+**modetest**
+
+```
+modetest -M rockchip -P 55@66:480x272
+```
 
 
 
