--- a/t113-s3/zh/12-硬件功能测试.md
+++ b/t113-s3/zh/12-硬件功能测试.md
@@ -4,9 +4,19 @@
 
 
 
+## 扩展引脚
+
+
+
+
+
 ## LVDS
 
 
+
+
+
+## DUAL LVDS
 
 
 
@@ -19,6 +29,10 @@
 
 
 ## 喇叭
+
+```
+
+```
 
 
 
@@ -54,7 +68,120 @@
 
 
 
+
+
 ## 4G Mobile
+
+
+
+
+
+
+
+## CAN
+
+### CAN收发测试
+
+K4B支持两路CAN接口，可将两路CAN连接后做收发测试
+
+
+
+**硬件连接**
+
+CANL <---> CANL
+
+CANH <---> CANH
+
+![image-20240930140153264](http://tanzhtanzh.oss-cn-shenzhen.aliyuncs.com/img/image-20240930140153264.png)
+
+
+
+**测试命令**
+
+```
+# 初始化CAN0
+$ ip link set can0 down
+$ ip link set can0 type can bitrate 500000
+$ ip link set can0 up
+
+# 初始化CAN1
+$ ip link set can1 down
+$ ip link set can1 type can bitrate 500000
+$ ip link set can1 up
+
+# 开始收发测试(CAN0接受、CAN1发送)
+$ candump can0
+$ cansend can1 123#DEADBEEF
+```
+
+
+
+
+
+## 串口
+
+K4B 配备4路串口
+
+
+
+**查看串口设备节点**
+
+```
+$ ls /dev/ttyS*
+ttyS1  ttyS3  ttyS4  ttyS5
+```
+
+> 串口设备节点说明：
+>
+> ​	ttyS1 作为 RS485串口
+>
+> ​	ttyS3 作为 调试串口
+>
+> ​	ttyS4 作为 TTL串口
+>
+> ​	ttyS5 作为 RS232串口
+
+
+
+### TTL串口测试
+
+**硬件连接**
+
+
+
+
+
+**测试命令**
+
+```
+minicom
+```
+
+
+
+
+
+### RS232串口测试
+
+**硬件连接**
+
+
+
+
+
+**测试命令**
+
+
+
+### RS485串口测试
+
+**硬件连接**
+
+
+
+
+
+**测试命令**
 
 
 
