--- a/t113-s3/zh/12-硬件功能测试.md
+++ b/t113-s3/zh/12-硬件功能测试.md
@@ -16,6 +16,21 @@
 
 
 
+## Buildroot测试脚本
+
+```
+buildroot/package/auto/sdk_demo/
+
+alpha_test/         bin/                dvr_test/           gif2rgb_test/       mem_test/           tpadc_test/         
+audioenc_test/      csi_test/           encoder_test/       gpio_test/          multiscreen_test/   tvd_test/           
+autplayer_test/     decoder_test/       fbinit_test/        lcd_bright_test/    record_test/        usbcam_test/        
+awrpaf_test/        dsp_debug_test/     g2d_test/           Makefile            stream_player_test/ yuv_test/  
+```
+
+
+
+
+
 ## DUAL LVDS
 
 
