--- a/rk356x/zh/12-硬件功能测试.md
+++ b/rk356x/zh/12-硬件功能测试.md
@@ -113,5 +113,34 @@ echo 0x100 > /sys/module/rk_vcodec/parameters/mpp_dev_debug
 
 ​	每帧解码时间测试结果log：
 
+```
+[  938.649847] rk_vcodec: fdf80200.rkvdec:0 session 2799:80 time: 93967 us hw 27794 us
+[  938.683932] rk_vcodec: fdf80200.rkvdec:0 session 2799:80 time: 93243 us hw 34114 us
+[  938.717400] rk_vcodec: fdf80200.rkvdec:0 session 2799:80 time: 93712 us hw 33463 us
+[  938.751306] rk_vcodec: fdf80200.rkvdec:0 session 2799:80 time: 100528 us hw 33952 us
+[  938.780302] rk_vcodec: fdf80200.rkvdec:0 session 2799:80 time: 95406 us hw 28932 us
+[  938.813718] rk_vcodec: fdf80200.rkvdec:0 session 2799:80 time: 94942 us hw 33414 us
+[  938.838935] rk_vcodec: fdf80200.rkvdec:0 session 2799:80 time: 86479 us hw 25243 us
+[  938.872539] rk_vcodec: fdf80200.rkvdec:0 session 2799:80 time: 91289 us hw 33486 us
+[  938.906450] rk_vcodec: fdf80200.rkvdec:0 session 2799:80 time: 91721 us hw 33970 us
+[  938.942726] rk_vcodec: fdf80200.rkvdec:0 session 2799:80 time: 102481 us hw 36284 us
+[  938.960331] rk_vcodec: fdf80200.rkvdec:0 session 2799:80 time: 86302 us hw 17609 us
+[  938.994526] rk_vcodec: fdf80200.rkvdec:0 session 2799:80 time: 86494 us hw 34091 us
+[  939.025353] rk_vcodec: fdf80200.rkvdec:0 session 2799:80 time: 80775 us hw 30825 us
+[  939.058137] rk_vcodec: fdf80200.rkvdec:0 session 2799:80 time: 96464 us hw 32684 us
+[  939.083688] rk_vcodec: fdf80200.rkvdec:0 session 2799:80 time: 87578 us hw 25662 us
+[  939.117213] rk_vcodec: fdf80200.rkvdec:0 session 2799:80 time: 89661 us hw 33563 us
+[  939.217315] rk_vcodec: fdf80200.rkvdec:0 session 2799:80 time: 37069 us hw 36964 us
+[  939.251172] rk_vcodec: fdf80200.rkvdec:0 session 2799:80 time: 67352 us hw 33863 us
+[  939.280392] rk_vcodec: fdf80200.rkvdec:0 session 2799:80 time: 92106 us hw 29202 us
+[  939.314217] rk_vcodec: fdf80200.rkvdec:0 session 2799:80 time: 95953 us hw 33812 us
+[  939.348362] rk_vcodec: fdf80200.rkvdec:0 session 2799:80 time: 96175 us hw 34231 us
+[  939.382485] rk_vcodec: fdf80200.rkvdec:0 session 2799:80 time: 101220 us hw 34098 us
+[  939.411522] rk_vcodec: fdf80200.rkvdec:0 session 2799:80 time: 96252 us hw 29038 us
+[  939.445999] rk_vcodec: fdf80200.rkvdec:0 session 2799:80 time: 96705 us hw 34475 us
+[  939.480091] rk_vcodec: fdf80200.rkvdec:0 session 2799:80 time: 96415 us hw 33986 us
+[  939.513800] rk_vcodec: fdf80200.rkvdec:0 session 2799:80 time: 101264 us hw 33760 us
+```
+
 
 
