--- a/rk356x/zh/12-硬件功能测试.md
+++ b/rk356x/zh/12-硬件功能测试.md
@@ -88,7 +88,7 @@ echo 0x100 > /sys/module/rk_vcodec/parameters/mpp_dev_debug
 
 ​	1080P_30帧/秒：GPU占用在42%-48%左右，
 
-​	每帧解码时间测试结果log：
+​	每帧解码时间测试结果log片段：
 
 ```
 [  639.172225] rk_vcodec: fdf80200.rkvdec:0 session 2268:56 time: 4195 us hw 4095 us
@@ -111,7 +111,7 @@ echo 0x100 > /sys/module/rk_vcodec/parameters/mpp_dev_debug
 
 ​	4K_30帧/秒：GPU占用在60%-68%左右，
 
-​	每帧解码时间测试结果log：
+​	每帧解码时间测试结果log片段：
 
 ```
 [  938.649847] rk_vcodec: fdf80200.rkvdec:0 session 2799:80 time: 93967 us hw 27794 us
