--- a/rk356x/zh/12-硬件功能测试.md
+++ b/rk356x/zh/12-硬件功能测试.md
@@ -86,7 +86,7 @@ echo 0x100 > /sys/module/rk_vcodec/parameters/mpp_dev_debug
 
 #### 测试结果：
 
-​	1080P_30帧/秒：GPU占用在42%-48%左右，
+​	1080P_30帧/秒：GPU占用在42%-48%左右
 
 ​	每帧解码时间测试结果日志片段：
 
@@ -109,7 +109,7 @@ echo 0x100 > /sys/module/rk_vcodec/parameters/mpp_dev_debug
 [  639.529122] rk_vcodec: fdf80200.rkvdec:0 session 2268:56 time: 22595 us hw 11125 us
 ```
 
-​	4K_30帧/秒：GPU占用在60%-68%左右，
+​	4K_30帧/秒：GPU占用在60%-68%左右
 
 ​	每帧解码时间测试结果日志片段：
 
