--- a/rk356x/zh/40-RK3568 LCD配置.md
+++ b/rk356x/zh/40-RK3568 LCD配置.md
@@ -118,6 +118,21 @@ PRODUCT_PROPERTY_OVERRIDES += vendor.hwc.device.extend=LVDS,HDMI-A
 
 ## 4. 单触摸屏驱动配置
 
+> 以GT9XX为例
+
+### 驱动的移植
+
+将厂商提供的驱动移植进SDK目录，并修改添加进编译文件
+
+驱动文件copy到触摸驱动的文件夹下$(SDK_DIR)\kernel-5.10\drivers\input\touchscreen
+
+修改kconfig添加
+
+```
+config TOUCHSCREEN_GT9XX
+	tristate "GT9XX touchscreens support"
+```
+
 
 
 
