--- a/h618/zh/10-系统镜像烧录.md
+++ b/h618/zh/10-系统镜像烧录.md
@@ -263,13 +263,13 @@ SD卡烧录工具建议使用balenaEtcher，可从网盘以下目录下载，或
 调试串口 或 虚拟终端 执行以下命令
 
 ```
-$ sudo nand-sata-install
+sudo nand-sata-install
 ```
 
 
 
 ```
-$ sudo 
+sudo 
 ```
 
 
