--- a/a133/zh/12-硬件功能使用说明.md
+++ b/a133/zh/12-硬件功能使用说明.md
@@ -303,3 +303,23 @@ numid=9,iface=MIXER,name='headphone gain'
 
 
 
+查看耳机开关状态
+
+```
+# amixer cget numid=14,iface=MIXER,name='Headphone Switch'
+numid=14,iface=MIXER,name='Headphone Switch'
+  ; type=BOOLEAN,access=rw------,values=1
+  : values=off
+```
+
+
+
+开启耳机开关
+
+```
+# amixer cset numid=14,iface=MIXER,name='Headphone Switch' 1
+numid=14,iface=MIXER,name='Headphone Switch'
+  ; type=BOOLEAN,access=rw------,values=1
+  : values=on
+```
+
