--- a/a133/zh/12-硬件功能使用说明.md
+++ b/a133/zh/12-硬件功能使用说明.md
@@ -281,6 +281,16 @@ console:/ # echo 0 > /sys/class/leds/fan_en/brightness
 
 ## Linux 音频功能测试
 
+工具环境
+
+```
+sudo apt install alsa-utils
+```
+
+
+
+列出控制列表
+
 ```
 root@kickpi:~# amixer controls
 numid=14,iface=MIXER,name='Headphone Switch'
