--- a/a133/zh/12-硬件功能使用说明.md
+++ b/a133/zh/12-硬件功能使用说明.md
@@ -287,6 +287,10 @@ console:/ # echo 0 > /sys/class/leds/fan_en/brightness
 sudo apt install alsa-utils
 ```
 
+```
+sudo apt-get install sox libsox-fmt-all
+```
+
 
 
 列出控制列表
