--- a/a133/zh/12-硬件功能使用说明.md
+++ b/a133/zh/12-硬件功能使用说明.md
@@ -347,3 +347,13 @@ play test/Music/1.mp3
 
 
 
+喇叭控制 (音频流同耳机，所以必须同时打开耳机开关)
+
+```
+打开
+echo 255 > /sys/class/leds/spk_en/brightness
+
+关闭
+echo 0 > /sys/class/leds/spk_en/brightness
+```
+
