--- a/a133/zh/12-硬件功能使用说明.md
+++ b/a133/zh/12-硬件功能使用说明.md
@@ -320,6 +320,8 @@ numid=9,iface=MIXER,name='headphone gain'
 查看耳机开关状态
 
 ```
+amixer cget + [controls内容]
+
 # amixer cget numid=14,iface=MIXER,name='Headphone Switch'
 numid=14,iface=MIXER,name='Headphone Switch'
   ; type=BOOLEAN,access=rw------,values=1
