--- a/a133/zh/12-硬件功能使用说明.md
+++ b/a133/zh/12-硬件功能使用说明.md
@@ -341,6 +341,17 @@ numid=14,iface=MIXER,name='Headphone Switch'
 
 
 
+麦克风开关
+
+```
+amixer cset numid=12,iface=MIXER,name='ADCL Input MIC1 Boost Switch' 1
+
+```
+
+
+
+
+
 播放测试
 
 ```
