--- a/a133/zh/12-硬件功能使用说明.md
+++ b/a133/zh/12-硬件功能使用说明.md
@@ -345,7 +345,7 @@ numid=14,iface=MIXER,name='Headphone Switch'
 
 ```
 amixer cset numid=12,iface=MIXER,name='ADCL Input MIC1 Boost Switch' 1
-
+amixer cset numid=13,iface=MIXER,name='ADCR Input MIC2 Boost Switch' 1
 ```
 
 
