--- a/a133/zh/12-硬件功能使用说明.md
+++ b/a133/zh/12-硬件功能使用说明.md
@@ -355,11 +355,18 @@ amixer cset numid=13,iface=MIXER,name='ADCR Input MIC2 Boost Switch' 0
 
 
 
+录音测试
+
+```
+arecord test.wav
+```
+
 
 
 播放测试
 
 ```
+aplay test.wav
 play test/Music/1.mp3
 ```
 
