--- a/a133/zh/12-硬件功能使用说明.md
+++ b/a133/zh/12-硬件功能使用说明.md
@@ -279,9 +279,9 @@ console:/ # echo 0 > /sys/class/leds/fan_en/brightness
 
 
 
-## Linux 音频功能测试
+## Linux 功能测试
 
-工具环境
+音频工具环境
 
 ```
 sudo apt install alsa-utils
