--- a/a133/zh/12-硬件功能使用说明.md
+++ b/a133/zh/12-硬件功能使用说明.md
@@ -382,3 +382,14 @@ echo 255 > /sys/class/leds/spk_en/brightness
 echo 0 > /sys/class/leds/spk_en/brightness
 ```
 
+
+
+风扇开关
+
+```
+打开
+echo 255 > /sys/class/leds/fan_en/brightness
+关闭
+echo 0 > /sys/class/leds/fan_en/brightness
+```
+
