--- a/rk356x/zh/40-RK3568 LCD配置.md
+++ b/rk356x/zh/40-RK3568 LCD配置.md
@@ -139,7 +139,8 @@ config TOUCHSCREEN_GT9XX
 obj-$(CONFIG_TOUCHSCREEN_GT9XX)		+= gt9xx/
 ```
 
-内核配置（arch/arm64/configs/rockchip_defconfig）添加CONFIG_TOUCHSCREEN_GT9XX=y
+内核配置添加CONFIG_TOUCHSCREEN_GT9XX=y
+内核配置文件如arch/arm64/configs/rockchip_defconfig
 
 ### 内核设备树配置
 
