--- a/a133/zh/12-硬件功能使用说明.md
+++ b/a133/zh/12-硬件功能使用说明.md
@@ -395,3 +395,21 @@ echo 0 > /sys/class/leds/fan_en/brightness
 
 
 
+wifi 测试
+
+```
+查看网络设备列表
+sudo nmcli dev
+
+开启wifi
+sudo nmcli r wifi on
+
+扫描附件热点
+sudo nmcli dev wifi
+
+连接 用户 SSID 密码的 PASSWORD 的热点 (其他热点修改对应用户及密码)
+sudo nmcli dev wifi connect "SSID" password "PASSWORD" ifname wlan0
+```
+
+
+
