--- a/a133/zh/12-硬件功能使用说明.md
+++ b/a133/zh/12-硬件功能使用说明.md
@@ -417,6 +417,15 @@ sudo nmcli dev wifi connect "SSID" password "PASSWORD" ifname wlan0
 
 ```
 sudo apt-get install bluez
+```
+
+
+
+4G 模块测试
 
 ```
+pppd call quectel-ppp
+```
+
+
 
