--- a/a133/zh/12-硬件功能使用说明.md
+++ b/a133/zh/12-硬件功能使用说明.md
@@ -418,7 +418,7 @@ sudo nmcli dev wifi connect "SSID" password "PASSWORD" ifname wlan0
 ```
 sudo apt-get install bluez
 hciconfig -a
-
+hcitool scan
 ```
 
 
