--- a/a133/zh/12-硬件功能使用说明.md
+++ b/a133/zh/12-硬件功能使用说明.md
@@ -443,5 +443,17 @@ mount /dev/mmcblk1p1 /mnt/
 
 
 
+xface 桌面
+
+```
+DEBIAN_FRONTEND=noninteractive apt install -y xubuntu-core onboard rsyslog sudo dialog apt-utils ntp evtest udev
+mv /var/lib/dpkg/info/ /var/lib/dpkg/info_old/
+mkdir /var/lib/dpkg/info/
+apt-get update
+DEBIAN_FRONTEND=noninteractive apt install -y xubuntu-core onboard rsyslog sudo dialog apt-utils ntp evtest udev
+mv /var/lib/dpkg/info_old/* /var/lib/dpkg/info/
+reboot
+```
+
 
 
