--- a/a133/zh/12-硬件功能使用说明.md
+++ b/a133/zh/12-硬件功能使用说明.md
@@ -443,7 +443,7 @@ mount /dev/mmcblk1p1 /mnt/
 
 
 
-xface 桌面
+xface 桌面安装（需要联网）
 
 ```
 DEBIAN_FRONTEND=noninteractive apt install -y xubuntu-core onboard rsyslog sudo dialog apt-utils ntp evtest udev
