--- a/a133/zh/12-硬件功能使用说明.md
+++ b/a133/zh/12-硬件功能使用说明.md
@@ -359,6 +359,7 @@ amixer cset numid=13,iface=MIXER,name='ADCR Input MIC2 Boost Switch' 0
 
 ```
 arecord test.wav
+arecord -r 16000 -f S16_LE -d 5 test.wav
 ```
 
 
