--- a/a133/zh/12-硬件功能使用说明.md
+++ b/a133/zh/12-硬件功能使用说明.md
@@ -351,6 +351,9 @@ amixer cset numid=13,iface=MIXER,name='ADCR Input MIC2 Boost Switch' 1
 关闭
 amixer cset numid=12,iface=MIXER,name='ADCL Input MIC1 Boost Switch' 0
 amixer cset numid=13,iface=MIXER,name='ADCR Input MIC2 Boost Switch' 0
+查看
+amixer cget numid=12,iface=MIXER,name='ADCL Input MIC1 Boost Switch'
+amixer cget numid=13,iface=MIXER,name='ADCR Input MIC2 Boost Switch'
 ```
 
 
