--- a/rk3576/zh/10-系统镜像烧录.md
+++ b/rk3576/zh/10-系统镜像烧录.md
@@ -14,6 +14,14 @@ RK3576平台windows固件烧写工具必现使用V3.28及以上版本
 
 Windows烧写工具：
 
+网盘：
+
+```
+5-DevelopmentTool/AndroidTool/
+```
+
+
+
 ```
 RKTools/windows/AndroidTool/AndroidTool_Release_v3.28
 ```
